[package]
name = "mqtt"
version = "0.1.0"
authors = ["Arnav Singh <arsing@microsoft.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
log = "0.4"
tokio-util = { version = "0.2", features = ["codec"] }

[dev-dependencies]
env_logger = "0.6"
structopt = "0.2"
structopt-derive = "0.2"
tokio = { version = "0.2", features = ["full"] }
